--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,13 +1,13 @@
 version: '2'
 services:
   yaadbuzz-app:
-    image: yaadbuzz_backend
+    image: yaadbuzz
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,swagger
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - SPRING_DATASOURCE_URL=jdbc:postgresql://yaadbuzz-postgresql:5432/yaadbuzz
-      - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
+      - JHIPSTER_SLEEP=3 # gives time for other services to boot before the application
     ports:
       - 8080:8080
   yaadbuzz-postgresql:
