--- a/src/main/docker/web/app.conf
+++ b/src/main/docker/web/app.conf
@@ -16,7 +16,7 @@ server {
     server_tokens off;
 
     location / {
-        proxy_pass http://yaadbuzz-app;
+        proxy_pass http://yaadbuzz-app:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
