--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -135,13 +135,13 @@ jhipster:
   clientApp:
     name: 'yaadbuzzBackendApp'
   # By default CORS is disabled. Uncomment to enable.
-  # cors:
-  #     allowed-origins: "*"
-  #     allowed-methods: "*"
-  #     allowed-headers: "*"
-  #     exposed-headers: "Authorization,Link,X-Total-Count"
-  #     allow-credentials: true
-  #     max-age: 1800
+  cors:
+       allowed-origins: "http://admin.yaadbuzz.ir,http://yaadbuzz.ir"
+       allowed-methods: "*"
+       allowed-headers: "*"
+       exposed-headers: "Authorization,Link,X-Total-Count"
+       allow-credentials: true
+       max-age: 1800
   mail:
     from: yaadbuzz@localhost
   swagger:
