Add configs for deployment with nginx (#2)
* Add configs for deployment with nginx

* Set app port in nginx config

* Remove unnecessary volumes

* change output frontend path

* change output frontend path2

* fix server url for admin page

* add cors

* Add access control headers by nginx

* Remove app container exposed ports

Co-authored-by: Hamidreza Montaseri <hr.montaseri@gandom.co>
Co-authored-by: hosseinmp76 <hosseinmp76@hotmail.com>

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -8,9 +8,17 @@ services:
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - SPRING_DATASOURCE_URL=jdbc:postgresql://yaadbuzz-postgresql:5432/yaadbuzz
       - JHIPSTER_SLEEP=3 # gives time for other services to boot before the application
-    ports:
-      - 8080:8080
   yaadbuzz-postgresql:
     extends:
       file: postgresql.yml
       service: yaadbuzz-postgresql
+
+  webserver:
+    build:
+      context: ./web
+    restart: always
+    volumes:
+      - ../../../build/resources/main/static:/data/admin
+      - ../../../../yaadbuzz-frontend/out:/data/panel
+    ports:
+      - 80:80
