--- a/src/main/docker/web/admin.conf
+++ b/src/main/docker/web/admin.conf
@@ -10,4 +10,6 @@ server {
     server_tokens off;
 
     root /data/admin;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
 }
