fix db migration

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -38,7 +38,7 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/oybg4j
+    url: jdbc:postgresql://localhost:5432/oybg4j2
     username: heartstonedb
     password: heartstonedb
     hikari:
