--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -11,6 +11,8 @@ services:
       - JHIPSTER_SLEEP=3 # gives time for other services to boot before the application
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
+    volumes:
+      - /data/yaadbuzz/files:/data/files
     ports:
       - 127.0.0.1:8080:8080
   yaadbuzz-postgresql:
