--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "incremental": true,
+    "skipLibCheck": true,
     "jsx": "react",
     "target": "es6",
     "module": "esnext",
