add mail server name

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -40,6 +40,7 @@ services:
       - yaadbuzz-app
   mail:
     image: namshi/smtp
+    MAILNAME: noreply@yaadbuzz.ir
     restart: always
     environment:
       - DISABLE_IPV6=true
