--- a/src/main/docker/mail.yml
+++ b/src/main/docker/mail.yml
@@ -4,6 +4,7 @@ services:
   mail:
     image: namshi/smtp
     restart: always
+    MAILNAME: noreply@yaadbuzz.ir
     ports:
       - 25:25
     environment:
