fix mail server name

--- a/src/main/docker/mail.yml
+++ b/src/main/docker/mail.yml
@@ -9,4 +9,4 @@ services:
       - 25:25
     environment:
       - DISABLE_IPV6=true
-      - MAILNAME: "noreply@yaadbuzz.ir"
+      - MAILNAME: 'noreply@yaadbuzz.ir'
