fix mail server name

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -43,4 +43,4 @@ services:
     restart: always
     environment:
       - DISABLE_IPV6=true
-      - MAILNAME:"noreply@yaadbuzz.ir"
+#      - MAILNAME:"noreply@yaadbuzz.ir"
