Add smtp service to docker containers (#12)
Add smtp service to docker containers
Co-authored-by: Hamidreza Montaseri <hr.montaseri@gandom.co>

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -38,3 +38,9 @@ services:
       - 80:80
     depends_on:
       - yaadbuzz-app
+  mail:
+    image: namshi/smtp
+    restart: always
+    environment:
+      - DISABLE_IPV6=true
+#      - MAILNAME:"noreply@yaadbuzz.ir"
