--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -38,7 +38,7 @@ management:
     probes:
       enabled: true
     mail:
-      enabled: false # When using the MailService, configure an SMTP server and set this to true
+      enabled: true # When using the MailService, configure an SMTP server and set this to true
   metrics:
     export:
       # Prometheus is the default metrics backend
@@ -148,7 +148,7 @@ jhipster:
        allow-credentials: true
        max-age: 1800
   mail:
-    from: yaadbuzz@localhost
+    from: noreply@yaadbuzz.ir
   api-docs:
     default-include-pattern: /api/.*
     title: yaadbuzz API
