--- a/src/main/docker/javaApp.yml
+++ b/src/main/docker/javaApp.yml
@@ -12,7 +12,6 @@ services:
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     volumes:
-      - /data/yaadbuzz/files:/data/files
+      - /data/yaadbuzz/files:/data/yaadbuzz/files
     ports:
       - 127.0.0.1:8080:8080
-
