--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,4 +31,5 @@ jobs:
               run: |
                   GIT_TAG=:${GITHUB_REF#refs/tags/}
                   DOCKER_TAG=${GIT_TAG#:refs/heads/main}
-                  ./gradlew jib -Djib.to.image=ghcr.io/Abu-Rayhan-building/yaadbuzz-backend/yaadbuzz${DOCKER_TAG} -Djib.to.auth="${{ secrets.GITHUB_TOKEN }} -x webpack"
+                  ./gradlew jib -Djib.to.image=yaadbuzz${DOCKER_TAG} -Djib.to.auth.username="${{ secrets.DOCKER_USERNAME }}" -Djib.to.auth.password="${{ secrets.DOCKER_PASSWORD }} -x webpack"
+
