--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,6 +23,8 @@ jobs:
               with:
                   java-version: '15.x'
 
+            - name: Login to DockerHub Registry
+              run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
             - name: Build and publish docker image
               if: github.event_name == 'push'
               run: |
