--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,5 +31,10 @@ jobs:
                   GIT_TAG=:${GITHUB_REF#refs/tags/}
                   DOCKER_TAG=${GIT_TAG#:refs/heads/main}
                   ./gradlew bootJar -Pprod jibDockerBuild -x webpack
-            - name: push
-              run: docker push hosseinmp762/yaadbuzz:tagname
+            - name: Push to Docker Hub
+              uses: docker/build-push-action@v1
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
+                repository: my-docker-hub-namespace/my-docker-hub-repository
+                tag_with_ref: true
